fixed all the neccessary design

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </nav>
       <div class="hero-section">
         <div class="hero">
-          <img src="./assets/Group.png" alt="" class="hero-img" />
+          <img src="./assets/Group.png" alt="icon" class="hero-img" />
           <div class="hero-text">
             <h2 class="hero-title">
               "In the near future, I hope to become a Developer."
@@ -51,12 +51,12 @@
                 <button class="learn-more-btn">Learn More</button>
               </div>
               <div class="div-img">
-                <img src="./assets/Layer_1.png" alt="" />
+                <img src="./assets/Layer_1.png" alt="layer" />
               </div>
             </div>
             <div class="div-flex bg-image">
               <div class="div-img">
-                <img src="./assets/Group 3.png" alt="" />
+                <img src="./assets/Group 3.png" alt="icon" />
               </div>
               <div class="div-text">
                 <h4>I will help People by creating Modern Web System</h4>
@@ -79,7 +79,7 @@
                 <button class="learn-more-btn">Learn More</button>
               </div>
               <div class="div-img">
-                <img src="./assets/Group 4.png" alt="" />
+                <img src="./assets/Group 4.png" alt="icon" />
               </div>
             </div>
           </div>
@@ -120,7 +120,7 @@
           </div>
           <div class="card-div">
             <div id="card-1" class="card">
-              <img src="./assets/html.png" alt="" />
+              <img src="./assets/html.png" alt="html" />
               <h3>HTML</h3>
               <p>
                 HTML is the standard markup language for creating web pages. It
@@ -129,7 +129,7 @@
               <a href="#" class="know-more-btn">Learn More</a>
             </div>
             <div id="card-2" class="card">
-              <img src="./assets/css.png" alt="" />
+              <img src="./assets/css.png" alt="css" />
               <h3>CSS</h3>
               <p>
                 Cascading Style Sheets (CSS) is a fundamental technology used in
@@ -138,7 +138,7 @@
               <a href="#" class="know-more-btn">Learn More</a>
             </div>
             <div id="card-3" class="card">
-              <img src="./assets/js.png" alt="" />
+              <img src="./assets/js.png" alt="JavaScript" />
               <h3>JavaScript</h3>
               <p>
                 JavaScript (JS) is a versatile, high-level programming language
@@ -160,7 +160,7 @@
           <div class="next-content">
             <div class="next-card">
               <div class="next-img">
-                <img src="./assets/react.png" alt="" />
+                <img src="./assets/react.png" alt="react" />
               </div>
               <div class="next-card-text">
                 <h3>React</h3>
@@ -174,7 +174,7 @@
             </div>
             <div class="next-card">
               <div class="next-img">
-                <img src="./assets/nodejs.png" alt="" />
+                <img src="./assets/nodejs.png" alt="nodejs" />
               </div>
               <div class="next-card-text">
                 <h3>Node.js</h3>
@@ -188,7 +188,7 @@
             </div>
             <div class="next-card">
               <div class="next-img">
-                <img src="./assets/mongodb.png" alt="" />
+                <img src="./assets/mongodb.png" alt="mongodb" />
               </div>
               <div class="next-card-text">
                 <h3>Node.js</h3>
@@ -224,13 +224,13 @@
       </div>
       <div class="social-media">
         <a href="https://www.facebook.com/" target="_blank"
-          ><img src="./assets/facebook.png" alt=""
+          ><img src="./assets/facebook.png" alt="facebook"
         /></a>
         <a href="https://github.com/" target="_blank"
-          ><img src="./assets/github.png" alt=""
+          ><img src="./assets/github.png" alt="github"
         /></a>
         <a href="https://www.linkedin.com/" target="_blank"
-          ><img src="./assets/linkedin-icon 1.png" alt=""
+          ><img src="./assets/linkedin-icon 1.png" alt="linkedin"
         /></a>
       </div>
     </footer>
