add link and font family

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                   meaningful and lasting improvements in various aspects of
                   society Insha Allah.
                 </p>
-                <button class="learn-more-btn">Learn More</button>
+                <a href="#" class="learn-more-btn">Learn More</a>
               </div>
               <div class="div-img">
                 <img src="./assets/Layer_1.png" alt="layer" />
@@ -65,7 +65,7 @@
                   meaningful and lasting improvements in various aspects of
                   society Insha Allah.
                 </p>
-                <button class="learn-more-btn">Learn More</button>
+                <a href="#" class="learn-more-btn">Learn More</a>
               </div>
             </div>
             <div class="div-flex">
@@ -76,7 +76,7 @@
                   meaningful and lasting improvements in various aspects of
                   society Insha Allah.
                 </p>
-                <button class="learn-more-btn">Learn More</button>
+                <a href="#" class="learn-more-btn">Learn More</a>
               </div>
               <div class="div-img">
                 <img src="./assets/Group 4.png" alt="icon" />
@@ -126,16 +126,26 @@
                 HTML is the standard markup language for creating web pages. It
                 describes the structure of a document.
               </p>
-              <a href="#" class="know-more-btn">Learn More</a>
+              <a
+                href="https://developer.mozilla.org/en-US/docs/Web/HTML"
+                class="know-more-btn"
+                target="_blank"
+                >Learn More</a
+              >
             </div>
             <div id="card-2" class="card">
               <img src="./assets/css.png" alt="css" />
               <h3>CSS</h3>
               <p>
                 Cascading Style Sheets (CSS) is a fundamental technology used in
-                web development.
+                web development.CSS is a powerful tool for.
               </p>
-              <a href="#" class="know-more-btn">Learn More</a>
+              <a
+                href="https://developer.mozilla.org/en-US/docs/Web/CSS"
+                class="know-more-btn"
+                target="_blank"
+                >Learn More</a
+              >
             </div>
             <div id="card-3" class="card">
               <img src="./assets/js.png" alt="JavaScript" />
@@ -144,7 +154,12 @@
                 JavaScript (JS) is a versatile, high-level programming language
                 that is an essential component.
               </p>
-              <a href="#" class="know-more-btn">Learn More</a>
+              <a
+                href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"
+                class="know-more-btn"
+                target="_blank"
+                >Learn More</a
+              >
             </div>
           </div>
         </div>
@@ -169,7 +184,12 @@
                   allows developers to create reusable UI components.React is a
                   powerful and flexible library for building user interfaces.
                 </p>
-                <a href="#" class="know-more-btn">Learn More</a>
+                <a
+                  href="https://www.w3schools.com/react/"
+                  class="know-more-btn"
+                  target="_blank"
+                  >Learn More</a
+                >
               </div>
             </div>
             <div class="next-card">
@@ -183,7 +203,12 @@
                   JavaScript engine. It allows developers to write server-side
                   and networking applications using JavaScript.
                 </p>
-                <a href="#" class="know-more-btn">Learn More</a>
+                <a
+                  href="https://www.w3schools.com/nodejs/"
+                  target="_blank"
+                  class="know-more-btn"
+                  >Learn More</a
+                >
               </div>
             </div>
             <div class="next-card">
@@ -198,7 +223,12 @@
                   relational databases, MongoDB uses a flexible,
                   document-oriented data model.
                 </p>
-                <a href="#" class="know-more-btn">Learn More</a>
+                <a
+                  href="https://www.w3schools.com/mongodb/"
+                  target="_blank"
+                  class="know-more-btn"
+                  >Learn More</a
+                >
               </div>
             </div>
           </div>
