--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
         <div class="container">
           <div class="dev-text">
             <h2>Why Web Development??</h2>
-            <p>
-              Web development is a dynamic and integral field that offers
-              numerous advantages and opportunities.
+            <p class="same-style">
+              Web dev is a dynamic field that offers numerous opportunities. Web
+              development is the process of building and maintaining websites
+              and web applications.
             </p>
           </div>
           <div class="development">
@@ -88,10 +89,10 @@
       <section class="inspiration">
         <div class="inspiration-text">
           <h2>My Inspiration</h2>
-          <p>
-            My inspiration came from my parents who believed in me. They have
-            always been passionate about technology and have inspired me to
-            create a career in web development. Insha Allah I will.
+          <p class="same-style">
+            My inspiration came from my parents. They have always been
+            passionate about technology and have inspired me a lot create a
+            career in Tech.
           </p>
         </div>
         <div class="video">
@@ -112,7 +113,7 @@
         <div class="current">
           <div class="current-text">
             <h2>My current Target</h2>
-            <p>
+            <p class="same-style">
               I am currently Learning About HTML, CSS, JavaScript. My goal is to
               continue learning and improving my skills to become a skilled and
               competent developer.
@@ -166,7 +167,7 @@
         <div class="next">
           <div class="next-text">
             <h2>My Next Target</h2>
-            <p>
+            <p class="same-style">
               I am planning to learn about React and Node.js. My goal is to
               continue learning and improving my skills to become a skilled and
               competent developer.
